syntax = "proto3";

package adamant.global.v1;

option go_package = "adamantglobalv1";

import "google/protobuf/timestamp.proto";
import "validate/validate.proto";
import "gincoinc/global/v1/gincoincglobalv1/enum.proto";
import "gincoinc/adamant/global/v1/adamantglobalv1/enum.proto";

// =============================================================================
//  Model
// =============================================================================

message Wallet {
    string wallet_id = 1;
    string name = 2;
    gincoinc.global.v1.Coin coin = 3;
    WalletType wallet_type = 4;
    gincoinc.global.v1.AddressType address_type = 5;
    uint32 m = 6;
    uint32 n = 7;
    WalletState state = 8;
    repeated Key keys = 9;
    repeated WalletMember members = 10;
    double balance = 11;
    string string_balance = 12;
    string address = 13;
    string policy_id = 14;
    google.protobuf.Timestamp create_time = 15;
    google.protobuf.Timestamp update_time = 16;
}

message WalletMember {
    string account_id = 1;
    adamant.global.v1.AccountType account_type = 2;
    string name = 3;
    string email = 4;
    RoleType role = 5;
    bool is_key_registered = 6;
}

message Key {
    string wallet_id = 1;
    string account_id = 2;
    adamant.global.v1.AccountType account_type = 3;
    string key_id = 4;
}

message Address {
    string wallet_id = 1;
    string address_id = 2;
    gincoinc.global.v1.Coin coin = 3;
    string address = 4;
    uint32 index = 5;
    double balance = 6;
    string string_balance = 7;
    AddressState state = 8;
    gincoinc.global.v1.AddressType address_type = 9;
    uint32 sequence_number = 10;
    google.protobuf.Timestamp create_time = 11;
    google.protobuf.Timestamp update_time = 12;
}

message Transaction {
    string wallet_id = 1;
    string transaction_id = 2;
    gincoinc.global.v1.Coin coin = 3;
    string tx_id = 4;
    string address = 5;
    double value = 6;
    string string_value = 7;
    double fee = 8;
    string string_fee = 9;
    uint64 fee_rate = 10;
    TransactionState state = 11;
    repeated Key signed_keys = 12;
    repeated TxInput tx_inputs = 13;
    repeated TxOutput tx_outputs = 14;
    repeated TransactionMember members = 15;
    google.protobuf.Timestamp create_time = 16;
    google.protobuf.Timestamp update_time = 17;
}

message TransactionMember {
    string account_id = 1;
    adamant.global.v1.AccountType account_type = 2;
    string name = 3;
    string email = 4;
    RoleType role = 5;
    bool signed = 6;
}

message TxInput {
    string tx_id = 1;
    uint32 tx_index = 2;
    double value = 3;
    string string_value = 4;
}

message TxOutput {
    string address = 1;
    double value = 2;
    string string_value = 3;
    bool is_change = 4;
}

message SignInfo {
    string wallet_id = 1;
    string transaction_id = 2;
    string key_id = 3;
    uint32 hd_account = 4;
    gincoinc.global.v1.Coin coin = 5;
    string tx_id = 6;
    string sign_message = 7;
    uint32 hd_change = 8;
    uint32 hd_index = 9;
    repeated SignTxInput sign_tx_inputs = 10;
}

message SignTxInput {
    uint32 tx_input_index = 1;
    string sign_message = 2;
    uint32 hd_change = 3; uint32 hd_index = 4; }

// Transfer ...
message Transfer {
    string wallet_id = 1;
    string transfer_id = 2;
    gincoinc.global.v1.Coin coin = 3;
    string tx_id = 4;
    gincoinc.global.v1.TransferType transfer_type = 5;
    double value = 6;
    string string_value = 7;
    string partner_wallet_id = 8;
    string partner_address = 9;
    gincoinc.global.v1.TransactionState state = 10;
    google.protobuf.Timestamp create_time = 11;
    google.protobuf.Timestamp update_time = 12;
}

message Rate {
    gincoinc.global.v1.Coin coin = 1;
    double jpy = 2;
    string string_jpy = 3;
}

message Deactivatability {
    string account_id = 1 [(validate.rules).string = {pattern: "^[0-9a-f]{8}-[0-9a-f]{4}-4[0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$"}];
    bool deactivatable = 2;
}

message LabeledAddress {
    string labeled_address_id = 1;
    string name = 2;
    gincoinc.global.v1.Coin coin = 3;
    string address = 4;
    LabeledAddressChangeRequest change_request = 5;
    bool can_delete = 6;
    google.protobuf.Timestamp create_time = 7;
    google.protobuf.Timestamp update_time = 8;
}

message LabeledAddressChangeRequest {
    string requester_account_id = 1 [(validate.rules).string = {pattern: "^[0-9a-f]{8}-[0-9a-f]{4}-4[0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$"}];
    string requester_name = 2;
    string approver_account_id = 3 [(validate.rules).string = {pattern: "^[0-9a-f]{8}-[0-9a-f]{4}-4[0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$"}];
    string approver_name = 4;
    string proposed_address = 5;
    bool address_is_reviewed = 6;
}

message Whitelist {
    string whitelist_id = 1 [(validate.rules).string = {pattern: "^[0-9a-f]{8}-[0-9a-f]{4}-4[0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$"}];
    string name = 2;
    gincoinc.global.v1.Coin coin = 3;
    repeated LabeledAddress addresses = 4;
    bool can_delete = 5;
    google.protobuf.Timestamp create_time = 6;
    google.protobuf.Timestamp update_time = 7;
}

message TransferLimit {
    string transfer_limit_id = 1 [(validate.rules).string = {pattern: "^[0-9a-f]{8}-[0-9a-f]{4}-4[0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$"}];
    string name = 2;
    gincoinc.global.v1.Coin coin = 3;
    int64 hourly_limit = 4;
    int64 daily_limit = 5;
    int64 one_time_limit = 6;
    TransferLimitChangeRequest change_request = 7;
    bool is_reviewed = 8;
    bool can_delete = 9;
    google.protobuf.Timestamp create_time = 10;
    google.protobuf.Timestamp update_time = 11;
}

message TransferLimitChangeRequest {
    string requester_account_id = 1;
    string requester_name = 2;
    string approver_account_id = 3;
    string approver_name = 4;
    int64 proposed_hourly_limit = 5;
    int64 proposed_daily_limit = 6;
    int64 proposed_one_time_limit = 7;
    bool is_reviewed = 8;
}

message TransferLimitEntry {
    TransferLimitType transfer_limit_type = 1;
    int64 transfer_limit_value = 2;
}

message Policy {
    string policy_id = 1 [(validate.rules).string = {pattern: "^[0-9a-f]{8}-[0-9a-f]{4}-4[0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$"}];
    PolicyType policy_type = 2;
    string name = 3;
    bool is_base_policy = 4;
    gincoinc.global.v1.Coin coin = 5;
    Whitelist whitelist = 6;
    TransferLimit transfer_limit = 7;
    bool can_delete = 8;
    google.protobuf.Timestamp create_time = 9;
    google.protobuf.Timestamp update_time = 10;
}

// =============================================================================
//  Request Model
// =============================================================================

message RequestTxOutput {
    string address = 1 [(validate.rules).string.min_len = 3];
    double value = 2 [(validate.rules).double = { gt: 0 }];
}

message RequestSignedInfo {
    repeated RequestSignature signatures = 1 [(validate.rules).repeated.min_items = 1];
}

message RequestSignature {
    uint32 sign_index = 1;
    string signature = 2 [(validate.rules).string.min_len = 1];
}
